// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegExp separator contains multiple groups and keep submatches:  limit limit:2 1`] = `
Array [
  "apple",
  "*pear  .+.  melon ^-^ banana",
]
`;

exports[`RegExp separator contains multiple groups and keep submatches:  limit limit:3 1`] = `
Array [
  "apple",
  "*",
  "-pear  .+.  melon ^-^ banana",
]
`;

exports[`RegExp separator contains multiple groups and keep submatches:  limit limit:4 1`] = `
Array [
  "apple",
  "*",
  "-",
  "*pear  .+.  melon ^-^ banana",
]
`;

exports[`RegExp separator contains multiple groups and keep submatches:  limit limit:5 1`] = `
Array [
  "apple",
  "*",
  "-",
  "*",
  "pear  .+.  melon ^-^ banana",
]
`;

exports[`RegExp separator with groups and keep submatches:  limit limit:2 1`] = `
Array [
  "apple *",
  "-* pear  .+.  melon ^-^ banana",
]
`;

exports[`RegExp separator with groups and keep submatches:  limit limit:3 1`] = `
Array [
  "apple *",
  "-",
  "* pear  .+.  melon ^-^ banana",
]
`;

exports[`RegExp separator with groups and keep submatches:  limit limit:4 1`] = `
Array [
  "apple *",
  "-",
  "* pear  .+.  melon ^",
  "-^ banana",
]
`;

exports[`RegExp separator with groups and keep submatches:  limit limit:5 1`] = `
Array [
  "apple *",
  "-",
  "* pear  .+.  melon ^",
  "-",
  "^ banana",
]
`;
